Migrated to Java 21
# Conflicts:
#	src/test/java/dev/softwaregarden/detector/DetectorTest.java